7124511: [macosx] Strange NullPointerException (err message: 'CFMessagePort: bootstrap_register(): failed 110 Summary: Force AWT Headless mode when the graphics server is unavailable Reviewed-by: swingler